add popups & links

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
 	//= partials/target.html
 	//= partials/rent.html
 	//= partials/service.html
+	//= partials/link_page.html
 	//= partials/footer.html
 	<!-- скрипты -->
 	//= partials/scripts.html
